--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
                My Biography
            </title>
            <meta charset="html"/>
+           <link rel="stylesheet" href="max.css" type= text/css>
        </head> 
 
        <header>
