--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!---<h2>In The Beginning...</h2>-->
                 </header>
             
-           <section class="childhood_days"></section> 
+           <section class="childhood_days"></section> <
            <p>
                <strong>Oluwafemi Maxima</strong> was born into the family 
                on August 6<sup>th</sup> 1880. He grew up in <em>Osogbo, Osun state.</em>
@@ -35,7 +35,7 @@
                high-spirited child.
            </p>
        </section>
-       <section class="life_as_teenager">
+       <section class="life_as_teenager"></ br>
            <p> 
            In 1890,Maxima moved to Osogbo,where he enrolled in a
             private school as a primary v student. While he was a secondary 
@@ -48,7 +48,7 @@
 Student of EKSU..
         </p>
        </section>
-       <section class="growing_up">
+       <section class="growing_up"> </ br>
             <p>
                 At age 20, Maxima moved to the city and he started a career out
                 of what he has always loved to do - teaching. He also learned to play some instrument
