--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                high-spirited child.
            </p>
        </section>
-       <section class="life_as_teenager"></ br>
+       <section class="life_as_teenager">
            <p> 
            In 1890,Maxima moved to Osogbo,where he enrolled in a
             private school as a primary v student. While he was a secondary 
@@ -48,7 +48,7 @@
 Student of EKSU..
         </p>
        </section>
-       <section class="growing_up"> </ br>
+       <section class="growing_up">
             <p>
                 At age 20, Maxima moved to the city and he started a career out
                 of what he has always loved to do - teaching. He also learned to play some instrument
